--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 .grid-container{
     margin: 10px;
-    background-color: rgb(255, 250, 236);
+    background-color: rgb(255, 255, 255);
     display:grid;
     grid-template-columns: repeat(16,1fr);
     grid-template-rows: repeat(16,1fr);
@@ -33,7 +33,7 @@
     justify-content: center;
 } 
 .grid{
-    background-color: rgb(255, 250, 236);
+    background-color: rgb(255, 255, 255);
 }
 .grid-menu {
     margin: 2%;
@@ -65,6 +65,9 @@ button{
 button:hover{
     background-color: rgb(233, 155, 83);
     color:rgb(0, 0, 0);
+}
+button .mousedown{
+    color:rgb(161, 98, 38);
 }
 label{
     text-align: center;
