change page style

--- a/style.css
+++ b/style.css
@@ -1,76 +1,95 @@
+
 *{
     margin: 0;
     padding: 0;
+    font-size: 16px;
+    color:rgb(248, 223, 81);
+    text-align: center;
+}
+body{
+    background-image: url(background1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.background-img{
+filter:blur(0px);
 }
 .sketch-container{
     margin: 20px;
     display:flex;
     height: 90vh;
-    border-style: solid;
-    border-color: rgb(255, 255, 0);
     justify-content: space-between;
 }
 
 .grid-container{
-    margin: 10px;
     background-color: rgb(255, 255, 255);
     display:grid;
     grid-template-columns: repeat(16,1fr);
     grid-template-rows: repeat(16,1fr);
     flex: auto;
     border-style: solid;
-    border-color: rgb(255, 165, 0);
+    border-color: rgb(157, 5, 228);
     aspect-ratio: 1/1;
+    box-shadow: 0px 0px 25px rgb(157, 5, 228) ;
+   
 } 
 .function-container{
-    margin: 10px;
-    background-color: rgb(255, 250, 236);
     display: flex;
     flex: auto;
-    border-style: solid;
-    border-color: rgb(255, 165, 0);
     aspect-ratio: 1/1;
     justify-content: center;
 } 
 .grid{
     background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 5px rgb(31, 34, 34);
 }
 .grid-menu {
-    margin: 2%;
     padding: 5%;
     display:flex;
+    border-style: solid;
+    border-color: rgb(157, 5, 228);
     flex-direction: column;
     justify-content: space-around;
+    box-shadow: 0px 0px 25px rgb(157, 5, 228);
+    background-color: rgba(157, 5, 228,50%);
 }
 #i_color{
     width: 100px;
     height: 100px;
 }
 .func_menu{
+    margin:0px;
     display:flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;;
 }
-button{
+button:hover{
+    background-color: rgb(248, 223, 81)!important;
+    color:rgb(0, 0, 0)!important;
+}
+.grid_button{
+    height: 60px;
+    width: 150px;
     margin: 10px;
-    padding: 10px;
-    font-size: 20px;
-    color: rgb(255, 165, 0);
+    padding: 5px 10px 5px 10px;
+    color: rgb(248, 223, 81);
     background-color: rgb(0, 0, 0);
     border-style: solid;
-    border-color: rgb(255, 165, 0);
-    border-radius: 10%;
+    border-color:  rgb(157, 5, 228);
+    border-radius: 10px;
 }
-button:hover{
-    background-color: rgb(233, 155, 83);
-    color:rgb(0, 0, 0);
-}
-button .mousedown{
-    color:rgb(161, 98, 38);
+.big_button{
+    height: 60px;
+    width: 200px;
+    margin: 10px;
+    padding: 5px 10px 5px 10px;
+    color: rgb(248, 223, 81);
+    background-color: rgb(0, 0, 0);
+    border-style: solid;
+    border-color:  rgb(157, 5, 228);
+    border-radius: 10px;
 }
 label{
     text-align: center;
-    color:rgb(255, 0, 0);
-    font-size: 20px;
 }
